--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
 <body>
   <div id="root" />
-<script type="text/javascript" src="./dist/bundle.min.js"></script></body>
+<script type="text/javascript" src="./client/bundle.min.js"></script></body>
 
 </html>
