--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <div id="root" />
+  <script type="text/javascript" src="./bundle.js"></script>
 <script type="text/javascript" src="./client/bundle.min.js"></script></body>
 
 </html>
