--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="root" />
-  <script type="text/javascript" src="./bundle.js"></script>
+  <script type="text/javascript" src="./index.js"></script>
 </body>
 
 </html>
